application des notes sur le style et des animations

--- a/src/app/components/UI/cardcontribution/cardcontribution.component.html
+++ b/src/app/components/UI/cardcontribution/cardcontribution.component.html
@@ -1,13 +1,13 @@
 <div class="card">
     <div id="left">
         <p>
-            Projet: {{contribution.projetTitre}}
+            Projet: {{contribution.nom_projet}}
         </p>
         <p>
-            Contributeur: {{contribution.contributeurPrenom}} {{contribution.contributeurNom}}
+            Contributeur: {{contribution.prenom_contributeur}} {{contribution.nom_contributeur}}
         </p>
         <p>
-            <!-- Tache: {{contribution.nomTache}} -->
+            Tache: {{contribution.descriptionTache}}
         </p>
     </div>
     <div id="right">
