--- a/src/app/components/projetgestionnairedetail/projetgestionnairedetail.component.html
+++ b/src/app/components/projetgestionnairedetail/projetgestionnairedetail.component.html
@@ -42,7 +42,7 @@
       <div class="contributors">
         <div class="top-line">
           <i class="ri-group-line" style="font-size: 25px;"></i>
-          <span class="count">12</span>
+          <span class="count">{{nbreContributeur}}</span>
         </div>
         <div class="label">Contributeurs</div>
       </div>
@@ -50,7 +50,7 @@
 
     <div class="button">
       <button class="btn-new-task" routerLink="../nouvelle_tache">
-        <i class="ri-add-circle-fill" style="color:#334DAA; font-size: 20px"></i>
+        <i class="ri-add-circle-fill" style="font-size: 20px"></i>
         <span>Nouvelle tache</span>
       </button>
     </div>
