--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
@@ -33,11 +33,8 @@
               @for (contributions of contributionsList; track $index) {
               <app-cardcontribution [contribution]="contributions"/>
             }}@else {
-                0 projet recent 
+                0 contributions récents 
             }
-
-            
-            
           </div>
         </div>
         <div class="statistiques" [class.decale]="!sidebarOpen">
@@ -72,13 +69,13 @@
         </span>
         <div class="card-content">
           @if(tout){
-            @for (projet of toutProjet; track $index) {
-              <app-cardprojet [projets]="projet"></app-cardprojet>
+            @for (Projets of toutProjet; track $index) {
+              <app-cardprojet [projets]="Projets"></app-cardprojet>
             }
           }@else 
           {
-            @for (projet of projetsRecents; track $index) {
-              <app-cardprojet [projets]="projet"></app-cardprojet>
+            @for (Projets of projetsRecents; track $index) {
+              <app-cardprojet [projets]="Projets"></app-cardprojet>
             }
           }
           
@@ -101,21 +98,25 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          
             @if(demandeContributions.length > 0)
             {
+
               @for (demande of demandeContributions; track $index) {
-                <td>{{demande.projetNom}}</td>
-                <td>{{demande.contributeurNom}}</td>
+                <tr>
+                  <td>{{demande.nom_projet}}</td>
+                <td>{{demande.nom_contributeur}}</td>
                 <td>{{demande.dateEnvoi}}</td>
                 <td>{{demande.profileContributeur}}</td>
                 <td class="actions">
                   <button id="accepte" (click)="openPopups('accept',demande)">Accepté</button>
                   <button id="refuse" (click)="openPopups('decline',demande)">Refusé</button>
                 </td>
+                </tr>
+                
               }
             }
-          </tr>
+          
         </tbody>
       </table>
     </div>
