--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,15 @@
-<p>page-not-found works!</p>
+<div class="not-found">
+  <div class="not-found__content">
+    <h1>404</h1>
+    <h2>Oups, page introuvable</h2>
+    <p>
+      La page que vous recherchez n’existe pas ou a été déplacée.<br />
+      Pas d’inquiétude, vous pouvez revenir à l’accueil en un clic.
+    </p>
+    <button class="btn-home" routerLink="">🏠 Retour à l’accueil</button>
+  </div>
+
+  <div class="not-found__image">
+    <img src="assets/img/404-illustration.png" alt="Page non trouvée" />
+  </div>
+</div>
