--- a/src/app/components/admins/dashboard/dashboard.component.css
+++ b/src/app/components/admins/dashboard/dashboard.component.css
@@ -403,17 +403,17 @@
   left: 0;
   width: 100%;
   height: 0;
-  background: linear-gradient(to bottom, #334DAA, #131c3d);
+  background: linear-gradient(to bottom, #496be9, #334DAA);
   transition: height 0.3s ease-in-out, background 0.5s ease-in-out;
   z-index: 1;
 }
 
 .secondary-color-slidein-top::before {
-    background: linear-gradient(to bottom, #F6C434, #715b19);
+    background: linear-gradient(to bottom, #ffdc74, #F6C434);
 }
 
 .purple-color-slidein-top::before {
-    background: linear-gradient(to bottom, #A020F0, #410d61);
+    background: linear-gradient(to bottom, #cd7dff, #A020F0);
 }
 
 .primary-color-slidein-top:hover::before,
