--- a/src/app/components/idees-projet/idees-projet.component.css
+++ b/src/app/components/idees-projet/idees-projet.component.css
@@ -1,6 +1,6 @@
 .principal-container {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     min-width: 700px;
     display: grid;
     background-color: #f1f1f1;
